--- a/config/product_mapping.json
+++ b/config/product_mapping.json
@@ -28,7 +28,10 @@
 			"type": "keyword"
 		},
 		"name": {
-			"type": "keyword"
+			"type": "text",
+            "analyzer": "autocomplete",
+            "search_analyzer": "standard",
+            "fielddata": true
 		},
 		"price": {
 			"type": "integer"
@@ -40,7 +43,10 @@
 			"type": "keyword"
         },
         "brand_name":{
-			"type": "keyword"
+			"type": "text",
+            "analyzer": "autocomplete",
+            "search_analyzer": "standard",
+            "fielddata": true
         },
         "active":{
 			"type": "boolean"
