--- a/config/video_mapping.json
+++ b/config/video_mapping.json
@@ -30,8 +30,7 @@
 		"hashtags": {
 			"type": "text",
             "analyzer": "autocomplete",
-            "search_analyzer": "standard",
-            "fielddata": true
+            "search_analyzer": "standard"
 		},
 		"live": {
 			"type": "boolean"
