--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@elastic/elasticsearch": "^7.4.0",
     "@sentry/node": "^5.7.1",
     "body-parser": "^1.19.0",
+    "bodybuilder": "^2.2.20",
     "express": "^4.17.1",
-    "mongodb": "^3.3.3"
+    "mongodb": "^3.3.3",
+    "request": "^2.88.0"
   }
 }
